 version is one source from __init__

[metadata]
name = robo-base 
version = attr: newpkg.__version__ 
author = Mike Knerr
#author_email = name@domain.com
description = base modules, objects, classes
long_description = file: README.md
#long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
# pypi index project page needs this vers of homepage
home-page = https://github.com/mkner/robo-base
#url = https://domain.com/sitename/
readme = "README.md"
keywords = python, packages
license =   MIT
classifiers = 
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
   

[options]
packages = find:
#install_requires =
#    packagename
#    somepackage <= 0.4
    

#ok is module export name
# that can be different from package distro name
[options.packages.find]
include = robo_base*


