# version is one source from __init__

[metadata]
name = robo-boards
version = attr: roboboards.__version__ 
author = Mike Knerr
#author_email = name@domain.com
description = interface modules for microprocessor boards
long_description = file: README.md
#long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
# pypi index project page needs this vers of homepage
home_page = https://github.com/mkner/robo-boards
#url = https://domain.com/sitename/
readme = README.md
keywords = mobile robotics, microprocessor boards, arduino, ML298P
license =   BSD
classifiers = 
   Programming Language :: Python :: 3
   License :: OSI Approved :: BSD License
   Operating System :: OS Independent

[options]
packages = find:
#install_requires =
#    packagename
#    somepackage <= 0.4
    

#ok is module export name
# that can be different from package distro name

[options.packages.find]
include = roboboards*


